--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "embla-carousel-class-names": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.30.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
